# ds-u2-actividad-1-listasenlazadassimples-DiegoRIbarra

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
arduino/sensor_simulator/: sensor_simulator.ino
docs/: Doxyfile
include/: ListaGeneral.h  ListaSensor.h  SensorBase.h  SensorPresion.h  SensorTemperatura.h  SerialReader.h
src/: ListaGeneral.cpp  SensorBase.cpp  SensorPresion.cpp  SensorTemperatura.cpp  SerialReader.cpp  main.cpp
